[package]
name = "raudio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
rodio = "0.22.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
